tests/baselines/reference/unusedMultipleParameters1InFunctionDeclaration.errors.txt
unusedMultipleParameters1InFunctionDeclaration.ts(1,18): error TS6133: 'person' is declared but its value is never read.
unusedMultipleParameters1InFunctionDeclaration.ts(1,34): error TS6133: 'person2' is declared but its value is never read.
unusedMultipleParameters1InFunctionDeclaration.ts(2,9): error TS6133: 'unused' is declared but its value is never read.


==== unusedMultipleParameters1InFunctionDeclaration.ts (3 errors) ====
    function greeter(person: string, person2: string) {
                     ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
                                     ~~~~~~~
!!! error TS6133: 'person2' is declared but its value is never read.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        person2 = "dummy value";
    }